Fixed dark mode and slideout animation

--- a/src/components/layout/Navbar/style.module.scss
+++ b/src/components/layout/Navbar/style.module.scss
@@ -1,12 +1,13 @@
 @use 'src/styles/vars.scss' as vars;
 
 .header {
+  background-color: var(--theme-background);
   height: vars.$header-height;
   left: 0;
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 999;
+  z-index: 10;
 
   .content {
     align-items: center;
@@ -15,6 +16,53 @@
     height: 4rem;
     padding: 0 1rem;
     width: 100%;
+    z-index: 20;
+
+    .toggleIcon {
+      background-color: inherit;
+      height: 20px;
+      margin-right: auto;
+      padding: 0;
+      position: relative;
+      width: 40px;
+
+      .bar1 {
+        background-color: var(--theme-text-on-background-1);
+        border-radius: 2px;
+        height: 5px;
+        position: absolute;
+        top: 1.5px;
+        transition: 0.3s ease-in-out transform, 0.3s ease-in-out transform-origin;
+        width: 40px;
+
+        &.open {
+          transform: rotate(45deg) translateY(-10px);
+          transform-origin: top left;
+        }
+      }
+
+      .bar2 {
+        background-color: var(--theme-text-on-background-1);
+        border-radius: 2px;
+        bottom: 1.5px;
+        height: 5px;
+        left: 0;
+        position: absolute;
+        transition: 0.3s ease-in-out transform, 0.3s ease-in-out transform-origin,
+          0.3s ease-in-out width;
+        width: 24px;
+
+        &.open {
+          transform: rotate(-45deg) translateY(10px);
+          transform-origin: bottom left;
+          width: 40px;
+        }
+      }
+
+      &.hidden {
+        display: none;
+      }
+    }
 
     .navLeft {
       align-items: center;
@@ -74,101 +122,40 @@
     }
   }
 
-  .wainbow {
-    background: -webkit-gradient(
-      linear,
-      right top,
-      left top,
-      from(#e981a0),
-      color-stop(18.75%, #f9a857),
-      color-stop(36.98%, #80ce1c),
-      color-stop(55.73%, #51c0c0),
-      color-stop(75%, #62b0ff),
-      to(#816dff)
-    );
-    background: vars.$wainbow;
-    height: 0.25rem;
-    position: absolute;
-    top: 4rem; // Position the wainbow at the bottom
-    transform: translateY(0); // Move wainbow to bottom of navbar by default
-    transition: 0.3s ease-in-out; // Apply transition to transform property
-    width: 100vw;
-  }
-
   .mobileNav {
-    align-items: right;
-    background-color: var(--theme-background);
+    align-items: flex-start;
+    background-color: inherit;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     line-height: 300%;
     margin-top: -18rem;
     padding: 0 1rem;
-    padding-bottom: 3rem; // Add padding to the bottom of the mobileNav
+    padding-bottom: 1rem;
     position: relative;
-    transition: 0.3s ease-in-out;
+    transition: margin-top 0.3s cubic-bezier(0, 0.4, 0.1, 1),
+      padding-bottom 0.3s cubic-bezier(0, 0.4, 0.1, 1); // fast-out-slow-in timing
     width: 100vw;
     z-index: -1;
 
     &.open {
       margin-top: 0;
+      padding-bottom: 3rem;
+    }
 
-      ~ .wainbow {
-        top: auto;
-      }
+    .mobileNavItem {
+      align-items: center;
+      display: flex;
+      gap: 0.5rem;
+      padding: 0 0.5rem;
+      text-decoration: none;
     }
   }
 
-  .mobileNavItem {
-    align-items: center;
-    display: flex;
-    gap: 0.5rem;
-    padding: 0 0.5rem;
-    text-decoration: none;
-  }
-
-  .toggleIcon {
-    background-color: var(--theme-background);
-    height: 20px;
-    margin-right: auto;
-    padding: 0;
-    position: relative;
-    width: 40px;
-
-    .bar1 {
-      background-color: var(--theme-text-on-background-1);
-      border-radius: 2px;
-      height: 5px;
-      position: absolute;
-      top: 1.5px;
-      transition: 0.3s ease-in-out all;
-      width: 40px;
-
-      &.open {
-        transform: rotate(45deg) translateY(-10px);
-        transform-origin: top left;
-      }
-    }
-
-    .bar2 {
-      background-color: var(--theme-text-on-background-1);
-      border-radius: 2px;
-      bottom: 1.5px;
-      height: 5px;
-      left: 0;
-      position: absolute;
-      transition: 0.3s ease-in-out all;
-      width: 24px;
-
-      &.open {
-        transform: rotate(-45deg) translateY(10px);
-        transform-origin: bottom left;
-        width: 40px;
-      }
-    }
-
-    &.hidden {
-      display: none;
-    }
+  .wainbow {
+    background: vars.$wainbow;
+    height: 0.25rem;
+    transition: all 0.3s ease-in-out;
+    width: 100vw;
   }
 }
